tests/negative/array_errors/invalid_array_index_type.nano
# Expected Error: Array index must be integer

fn main() -> int {
    let arr: array<int> = [1, 2, 3]
    let idx: string = "hello"
    let x: int = (at arr idx)  # Error: string used as array index
    return x
}

shadow main {
    assert (== (main) 1)
}
